--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 <!-- Cuerpo de la pagina -->
 <body>
     <header>
-        <div class="menu"></div>
-        <i></i>
+        <div class="menu"><i class="fa-solid fa-bars"></i></div>
+        <i class="fa-solid fa-pizza-slice"></i>
         <h1>Pizza <span>Code</span></h1>
     </header>
     <main>
@@ -26,7 +26,7 @@
         <div class="PROMO"></div>
         <!-- Items de pizza -->
         <div class="ITEM">
-            <h2></h2>
+            <h2>Pizzas</h2>
             <div class="ITEM1">
                 <img src="" alt="">
                 <div class="ITEMTEXT">
@@ -35,37 +35,37 @@
                 </div>
             </div>
             <div class="ITEM2">
-                <img src="" alt="">
+                <img src="img/american-gfcf6b3aee_1280 (1).jpg" alt="">
                 <div class="ITEMTEXT">
-                    <h3>Pizza Napolitana</h3>
+                    <h3>Pizza Americana</h3>
                     <p>20$</p>
                 </div>
             </div>
             <div class="ITEM3">
                 <img src="" alt="">
                 <div class="ITEMTEXT">
-                    <h3>Pizza Napolitana</h3>
+                    <h3>Pizza Hawaiana</h3>
                     <p>20$</p>
                 </div>
             </div>
             <div class="ITEM4">
                 <img src="" alt="">
                 <div class="ITEMTEXT">
-                    <h3>Pizza Napolitana</h3>
+                    <h3>Pizza Pepperoni</h3>
                     <p>20$</p>
                 </div>
             </div>
             <div class="ITEM5">
                 <img src="" alt="">
                 <div class="ITEMTEXT">
-                    <h3>Pizza Napolitana</h3>
+                    <h3>Pizza Todas las Carnes</h3>
                     <p>20$</p>
                 </div>
             </div>
             <div class="ITEM6">
                 <img src="" alt="">
                 <div class="ITEMTEXT">
-                    <h3>Pizza Napolitana</h3>
+                    <h3>Pizza BBQ</h3>
                     <p>20$</p>
                 </div>
             </div>
