agrego productos ya avanzo con la pagina de inicio

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <header>
         <div class="menu"><i class="fa-solid fa-bars"></i></div>
         <i class="fa-solid fa-pizza-slice"></i>
-        <h1>Pizza <span>Code</span></h1>
+        <h1 id="titulo">Pizza <span>Code</span></h1>
     </header>
     <main>
         <!-- Anuncios y Ofertas -->
@@ -27,43 +27,43 @@
         <!-- Items de pizza -->
         <div class="ITEM">
             <h2>Pizzas</h2>
-            <div class="ITEM1">
-                <img src="" alt="">
+            <div class="ITEMM 1">
+                <img src="img/pizza-gdf9eac9d1_1280.jpg" alt="Napolitana">
                 <div class="ITEMTEXT">
                     <h3>Pizza Napolitana</h3>
                     <p>20$</p>
                 </div>
             </div>
-            <div class="ITEM2">
-                <img src="img/american-gfcf6b3aee_1280 (1).jpg" alt="">
+            <div class="ITEMM 2">
+                <img src="img/american-gfcf6b3aee_1280 (1).jpg" alt="Americana">
                 <div class="ITEMTEXT">
                     <h3>Pizza Americana</h3>
                     <p>20$</p>
                 </div>
             </div>
-            <div class="ITEM3">
-                <img src="" alt="">
+            <div class="ITEMM 3">
+                <img src="img/pizza-g7dfa3aa4b_1280.jpg" alt="Hawaiana">
                 <div class="ITEMTEXT">
                     <h3>Pizza Hawaiana</h3>
                     <p>20$</p>
                 </div>
             </div>
-            <div class="ITEM4">
-                <img src="" alt="">
+            <div class="ITEMM 4">
+                <img src="img/pizza-ga54608302_1280.jpg" alt="Pepperoni">
                 <div class="ITEMTEXT">
                     <h3>Pizza Pepperoni</h3>
                     <p>20$</p>
                 </div>
             </div>
-            <div class="ITEM5">
-                <img src="" alt="">
+            <div class="ITEMM 5">
+                <img src="" alt="Todas las Carnes">
                 <div class="ITEMTEXT">
                     <h3>Pizza Todas las Carnes</h3>
                     <p>20$</p>
                 </div>
             </div>
-            <div class="ITEM6">
-                <img src="" alt="">
+            <div class="ITEMM 6">
+                <img src="" alt="BBQ">
                 <div class="ITEMTEXT">
                     <h3>Pizza BBQ</h3>
                     <p>20$</p>
@@ -72,11 +72,13 @@
         </div>
     </main>
     <footer>
-        <h2></h2>
-        <i class="fa-brands fa-instagram"></i>
-        <i class="fa-brands fa-square-facebook"></i>
-        <i class="fa-brands fa-square-twitter"></i>
-        <i class="fa-brands fa-tiktok"></i>
+        <h2> Redes Sociales</h2>
+        <div class="redes">
+            <i class="fa-brands fa-instagram"></i>
+            <i class="fa-brands fa-square-facebook"></i>
+            <i class="fa-brands fa-square-twitter"></i>
+            <i class="fa-brands fa-tiktok"></i>
+        </div>
         <div class="contact">
             <i class="fa-solid fa-phone"></i>
             <p>+56479320665</p>
