avanzo con el footer agrego mas cosas

--- a/index.html
+++ b/index.html
@@ -74,18 +74,21 @@
     <footer>
         <h2> Redes Sociales</h2>
         <div class="redes">
-            <i class="fa-brands fa-instagram"></i>
-            <i class="fa-brands fa-square-facebook"></i>
-            <i class="fa-brands fa-square-twitter"></i>
-            <i class="fa-brands fa-tiktok"></i>
+            <a href=""><i class="fa-brands fa-instagram icon"></i></a>
+            <a href=""><i class="fa-brands fa-square-facebook icon"></i></a>
+            <a href=""><i class="fa-brands fa-square-twitter icon"></i></a>
+            <a href=""><i class="fa-brands fa-tiktok icon"></i></a>
         </div>
+        <br>
         <div class="contact">
-            <i class="fa-solid fa-phone"></i>
-            <p>+56479320665</p>
+            <i class="fa-solid fa-phone icon"></i>
+            <p class="cnum"> +56 (4) 9320749</p>
         </div>
-        <p>Caja de Comentarios</p>
-        <input type="text">
-        <input type="submit">
+        <div class="coment">
+            <p>Caja de Comentarios</p>
+            <input class="text" type="text">
+            <input class="submit" type="submit">
+        </div>
     </footer>
 </body>
 </html>
