Modifico los Items

--- a/index.html
+++ b/index.html
@@ -25,48 +25,54 @@
         <!-- Promociones de pizza -->
         <div class="PROMO"></div>
         <!-- Items de pizza -->
+        <h2>Pizzas</h2>
         <div class="ITEM">
-            <h2>Pizzas</h2>
             <div class="ITEMM 1">
                 <img src="img/pizza-gdf9eac9d1_1280.jpg" alt="Napolitana">
                 <div class="ITEMTEXT">
                     <h3>Pizza Napolitana</h3>
-                    <p>20$</p>
+                    <p class="description">Ingredientes: <br>-Tomate <br>-Queso</p>
+                    <p class="money">20$</p>
                 </div>
             </div>
             <div class="ITEMM 2">
                 <img src="img/american-gfcf6b3aee_1280 (1).jpg" alt="Americana">
                 <div class="ITEMTEXT">
                     <h3>Pizza Americana</h3>
-                    <p>20$</p>
+                    <p class="description"></p>
+                    <p class="money">20$</p>
                 </div>
             </div>
             <div class="ITEMM 3">
                 <img src="img/pizza-g7dfa3aa4b_1280.jpg" alt="Hawaiana">
                 <div class="ITEMTEXT">
                     <h3>Pizza Hawaiana</h3>
-                    <p>20$</p>
+                    <p class="description"></p>
+                    <p class="money">20$</p>
                 </div>
             </div>
             <div class="ITEMM 4">
                 <img src="img/pizza-ga54608302_1280.jpg" alt="Pepperoni">
                 <div class="ITEMTEXT">
                     <h3>Pizza Pepperoni</h3>
-                    <p>20$</p>
+                    <p class="description"></p>
+                    <p class="money">20$</p>
                 </div>
             </div>
             <div class="ITEMM 5">
                 <img src="" alt="Todas las Carnes">
                 <div class="ITEMTEXT">
                     <h3>Pizza Todas las Carnes</h3>
-                    <p>20$</p>
+                    <p class="description"></p>
+                    <p class="money">20$</p>
                 </div>
             </div>
             <div class="ITEMM 6">
                 <img src="" alt="BBQ">
                 <div class="ITEMTEXT">
                     <h3>Pizza BBQ</h3>
-                    <p>20$</p>
+                    <p class="description"></p>
+                    <p class="money">20$</p>
                 </div>
             </div>
         </div>
