termino items, seccion de promociones

--- a/index.html
+++ b/index.html
@@ -1,18 +1,21 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Assistant&family=Lobster&family=Oswald&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Assistant&family=Lobster&family=Oswald&display=swap"
+        rel="stylesheet">
     <script src="https://kit.fontawesome.com/192ba4ed31.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="styles.css">
     <title>Pizza Code</title>
 </head>
 
 <!-- Cuerpo de la pagina -->
+
 <body>
     <header>
         <div class="menu"><i class="fa-solid fa-bars"></i></div>
@@ -20,62 +23,119 @@
         <h1 id="titulo">Pizza <span>Code</span></h1>
     </header>
     <main>
-        <!-- Anuncios y Ofertas -->
-        <div class="ADD"></div>
-        <!-- Promociones de pizza -->
-        <div class="PROMO"></div>
-        <!-- Items de pizza -->
-        <h2>Pizzas</h2>
-        <div class="ITEM">
-            <div class="ITEMM 1">
-                <img src="img/pizza-gdf9eac9d1_1280.jpg" alt="Napolitana">
-                <div class="ITEMTEXT">
-                    <h3>Pizza Napolitana</h3>
-                    <p class="description">Ingredientes: <br>-Tomate <br>-Queso</p>
-                    <p class="money">20$</p>
+        <div class="centro">
+            <!-- Anuncios y Ofertas -->
+            <div class="ADD">
+            </div>
+            <!-- Promociones de pizza -->
+            <h2>Promociones Del Dia</h2>
+            <p>50% de descuento en pizzas de 3 o más ingredientes al comprar una bebida y otro acompañamiento. Todos los
+                días de 4 a 8 p.m.</p> <br>
+            <div class="PROMO">
+                <div class="ITEM" id="ITEMPROMO">
+                    <div class="ITEMM P1">
+                        <img src="img/pizza-gdf9eac9d1_1280.jpg" alt="Napolitana">
+                        <div class="ITEMTEXT">
+                            <h3>Promocion 1</h3> <br>
+                            <p class="description"></p>
+                            <p class="size">Mediana<span class="money">12$</span></p>
+                            <p class="size">Grande<span class="money">20$</span></p> <br> <br>
+                            <a class="buybtn" href="">Agregar al Carrito</a>
+                        </div>
+                    </div>
+                    <div class="ITEMM P1">
+                        <img src="img/pizza-gdf9eac9d1_1280.jpg" alt="Napolitana">
+                        <div class="ITEMTEXT">
+                            <h3>Promocion 2</h3> <br>
+                            <p class="description"></p>
+                            <p class="size">Mediana<span class="money">12$</span></p>
+                            <p class="size">Grande<span class="money">20$</span></p> <br> <br>
+                            <a class="buybtn" href="">Agregar al Carrito</a>
+                        </div>
+                    </div>
+                    <div class="ITEMM P1">
+                        <img src="img/pizza-gdf9eac9d1_1280.jpg" alt="Napolitana">
+                        <div class="ITEMTEXT">
+                            <h3>Promocion 3</h3> <br>
+                            <p class="description"></p>
+                            <p class="size">Mediana<span class="money">12$</span></p>
+                            <p class="size">Grande<span class="money">20$</span></p> <br> <br>
+                            <a class="buybtn" href="">Agregar al Carrito</a>
+                        </div>
+                    </div>
+                </div>
+                <!-- Items de pizza -->
+
+                <h2>Pizzas 2x1</h2>
+                <p>Elige tus pizzas favoritas y activa la promoción agregándolas al carrito.</p> <br>
+                <div class="ITEM">
+                    <div class="ITEMM 1">
+                        <img src="img/pizza-gdf9eac9d1_1280.jpg" alt="Napolitana">
+                        <div class="ITEMTEXT">
+                            <h3>Pizza Napolitana</h3> <br>
+                            <p class="description">Ingredientes: <br>-Mozzarella <br>-Tomate </p>
+                            <p class="size">Mediana<span class="money">12$</span></p>
+                            <p class="size">Grande<span class="money">20$</span></p> <br> <br>
+                            <a class="buybtn" href="">Agregar al Carrito</a>
+                        </div>
+                    </div>
+                    <div class="ITEMM 2">
+                        <img src="img/pizza-americana.webp" alt="Americana">
+                        <div class="ITEMTEXT">
+                            <h3>Pizza Americana</h3> <br>
+                            <p class="description">Ingredientes: <br>-Doble Mozzarella <br>-Pepperoni</p>
+                            <p class="size">Mediana<span class="money">12$</span></p>
+                            <p class="size">Grande<span class="money">20$</span></p> <br> <br>
+                            <a class="buybtn" href="">Agregar al Carrito</a>
+                        </div>
+                    </div>
+                    <div class="ITEMM 3">
+                        <img src="img/pizza-g7dfa3aa4b_1280.jpg" alt="Hawaiana">
+                        <div class="ITEMTEXT">
+                            <h3>Pizza Hawaiana</h3> <br>
+                            <p class="description">Ingredientes: <br>-Mozzarella <br>-Jamon <br>-Piña</p>
+                            <p class="size">Mediana<span class="money">12$</span></p>
+                            <p class="size">Grande<span class="money">20$</span></p> <br>
+                            <a class="buybtn" href="">Agregar al Carrito</a>
+                        </div>
+                    </div>
+                    <div class="ITEMM 4">
+                        <img src="img/pizza-ga54608302_1280.jpg" alt="Pepperoni">
+                        <div class="ITEMTEXT">
+                            <h3>Pizza Pepperoni</h3> <br>
+                            <p class="description">Ingredientes: <br>-Mozzarella <br>-Pepperoni</p>
+                            <p class="size">Mediana<span class="money">12$</span></p>
+                            <p class="size">Grande<span class="money">20$</span></p> <br> <br>
+                            <a class="buybtn" href="">Agregar al Carrito</a>
+                        </div>
+                    </div>
+                    <div class="ITEMM 5">
+                        <img src="img/El-Carnicero-Todas-las-Carnes--scaled.jpg" alt="Todas las Carnes">
+                        <div class="ITEMTEXT">
+                            <h3>Pizza Todas las Carnes</h3> <br>
+                            <p class="description">Ingredientes: <br>-Mozzarella -Choricillo <br> -Jamon -Pepperoni
+                                <br>-Carne
+                                molida
+                            </p>
+                            <p class="size">Mediana<span class="money">12$</span></p>
+                            <p class="size">Grande<span class="money">20$</span></p> <br>
+                            <a class="buybtn" href="">Agregar al Carrito</a>
+                        </div>
+                    </div>
+                    <div class="ITEMM 6">
+                        <img src="img/receta-pizza-barbacoa.jpg" alt="BBQ">
+                        <div class="ITEMTEXT">
+                            <h3>Pizza Tocino BBQ</h3> <br>
+                            <p class="description">Ingredientes: <br>-Salsa BQQ -Mozzarella <br>-Pollo -Tocino
+                                <br>-Cebolla
+                            </p>
+                            <p class="size">Mediana<span class="money">12$</span></p>
+                            <p class="size">Grande<span class="money">20$</span></p> <br>
+                            <a class="buybtn" href="">Agregar al Carrito</a>
+                        </div>
+                    </div>
                 </div>
             </div>
-            <div class="ITEMM 2">
-                <img src="img/american-gfcf6b3aee_1280 (1).jpg" alt="Americana">
-                <div class="ITEMTEXT">
-                    <h3>Pizza Americana</h3>
-                    <p class="description"></p>
-                    <p class="money">20$</p>
-                </div>
-            </div>
-            <div class="ITEMM 3">
-                <img src="img/pizza-g7dfa3aa4b_1280.jpg" alt="Hawaiana">
-                <div class="ITEMTEXT">
-                    <h3>Pizza Hawaiana</h3>
-                    <p class="description"></p>
-                    <p class="money">20$</p>
-                </div>
-            </div>
-            <div class="ITEMM 4">
-                <img src="img/pizza-ga54608302_1280.jpg" alt="Pepperoni">
-                <div class="ITEMTEXT">
-                    <h3>Pizza Pepperoni</h3>
-                    <p class="description"></p>
-                    <p class="money">20$</p>
-                </div>
-            </div>
-            <div class="ITEMM 5">
-                <img src="" alt="Todas las Carnes">
-                <div class="ITEMTEXT">
-                    <h3>Pizza Todas las Carnes</h3>
-                    <p class="description"></p>
-                    <p class="money">20$</p>
-                </div>
-            </div>
-            <div class="ITEMM 6">
-                <img src="" alt="BBQ">
-                <div class="ITEMTEXT">
-                    <h3>Pizza BBQ</h3>
-                    <p class="description"></p>
-                    <p class="money">20$</p>
-                </div>
-            </div>
-        </div>
     </main>
     <footer>
         <h2> Redes Sociales</h2>
@@ -97,4 +157,5 @@
         </div>
     </footer>
 </body>
+
 </html>
