Agrego una nueva pagina de ubicacion y tambien agrego un menu

--- a/index.html
+++ b/index.html
@@ -21,6 +21,13 @@
         <div class="menu"><i class="fa-solid fa-bars"></i></div>
         <i class="fa-solid fa-pizza-slice"></i>
         <h1 id="titulo">Pizza <span>Code</span></h1>
+        <div class="menus">
+            <div class="btnmenu">
+                <a href="#ITEM" class="btn">Pizzas 2x1</a> |
+                <a href="local.html" class="btn">Local</a> |
+                <a href="login.html" class="btn">Iniciar Sesion</a>
+            </div>
+        </div>
     </header>
     <main>
         <div class="centro">
@@ -65,8 +72,8 @@
                     </div>
                 </div>
                 <!-- Items de pizza -->
-
-                <h2>Pizzas 2x1</h2>
+                <div id="ITEM"></div>
+                <h2 id="#ITEM">Pizzas 2x1</h2>
                 <p>Elige tus pizzas favoritas y activa la promoción agregándolas al carrito.</p> <br>
                 <div class="ITEM">
                     <div class="ITEMM 1">
@@ -136,6 +143,7 @@
                     </div>
                 </div>
             </div>
+        </div>
     </main>
     <footer>
         <h2> Redes Sociales</h2>
