Termino detalles y procedo a subirlo

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         rel="stylesheet">
     <script src="https://kit.fontawesome.com/192ba4ed31.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="styles.css">
+    
     <title>Pizza Code</title>
 </head>
 
@@ -44,7 +45,7 @@
                         <img src="img/pizza-gdf9eac9d1_1280.jpg" alt="Napolitana">
                         <div class="ITEMTEXT">
                             <h3>Promocion 1</h3> <br>
-                            <p class="description"></p>
+                            <p class="description">-1 Pepperoni <br>-1 Bebida a Eleccion <br>-1 Palitos de Ajo</p>
                             <p class="size">Mediana<span class="money">12$</span></p>
                             <p class="size">Grande<span class="money">20$</span></p> <br> <br>
                             <a class="buybtn" href="">Agregar al Carrito</a>
@@ -54,7 +55,7 @@
                         <img src="img/pizza-gdf9eac9d1_1280.jpg" alt="Napolitana">
                         <div class="ITEMTEXT">
                             <h3>Promocion 2</h3> <br>
-                            <p class="description"></p>
+                            <p class="description">-2 Pepperoni <br>-2 Bebidas a Eleccion</p>
                             <p class="size">Mediana<span class="money">12$</span></p>
                             <p class="size">Grande<span class="money">20$</span></p> <br> <br>
                             <a class="buybtn" href="">Agregar al Carrito</a>
@@ -64,7 +65,7 @@
                         <img src="img/pizza-gdf9eac9d1_1280.jpg" alt="Napolitana">
                         <div class="ITEMTEXT">
                             <h3>Promocion 3</h3> <br>
-                            <p class="description"></p>
+                            <p class="description">-1 Napolitana <br>-1 Bebida a Eleccion <br>-2 Palitos de Ajo</p>
                             <p class="size">Mediana<span class="money">12$</span></p>
                             <p class="size">Grande<span class="money">20$</span></p> <br> <br>
                             <a class="buybtn" href="">Agregar al Carrito</a>
@@ -157,12 +158,13 @@
         <div class="contact">
             <i class="fa-solid fa-phone icon"></i>
             <p class="cnum"> +56 (4) 9320749</p>
-        </div>
+        </div> <br>
         <div class="coment">
             <p>Caja de Comentarios</p>
             <input class="text" type="text">
             <input class="submit" type="submit">
-        </div>
+        </div> <br> <br>
+        <h2 class="rights">Todos los derechos son Reservados <br> Pizza Code©</h2>
     </footer>
 </body>
 
