ajusto ultimos detalles y termino el proyecto

--- a/login.html
+++ b/login.html
@@ -84,7 +84,8 @@
             <p>Caja de Comentarios</p>
             <input class="text" type="text">
             <input class="submit" type="submit">
-        </div>
+        </div> <br> <br>
+        <h2 class="rights">Todos los derechos son Reservados <br> Pizza Code©</h2>
     </footer>
 </body>
 </html>
