--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Assistant&family=Lobster&family=Oswald&display=swap"
         rel="stylesheet">
     <script src="https://kit.fontawesome.com/192ba4ed31.js" crossorigin="anonymous"></script>
+    <meta name="pizza comprar 2x1 pizzacode ">
     <link rel="stylesheet" href="styles.css">
 
     <title>Pizza Code</title>
